--- a/01ejemplo/index.html
+++ b/01ejemplo/index.html
@@ -23,7 +23,11 @@
 
         </section>
     </div>
-    <div class="container-footer"></div>
+    <div class="container-footer">
+        <footer>
+            
+        </footer>
+    </div>
     
 </body>
 </html>
